--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "aws-amplify": "^2.2.2",
+    "aws-amplify-vue": "^1.1.2",
     "core-js": "^3.4.4",
     "vue": "^2.6.10"
   },
