--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "aws-amplify": "^2.2.2",
     "aws-amplify-vue": "^1.1.2",
     "core-js": "^3.4.4",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
